reposition back button to fix overlap with logo

--- a/src/components/ui/LeftSidebar/LeftSidebar.module.scss
+++ b/src/components/ui/LeftSidebar/LeftSidebar.module.scss
@@ -22,7 +22,6 @@
       width: 100%;
       font-size: 1rem;
       text-align: center;
-      width: 600px;
 
       .item {
         .link {
